--- a/OpenDeviceLAb/scss/partials/_components.scss
+++ b/OpenDeviceLAb/scss/partials/_components.scss
@@ -268,17 +268,13 @@
     }
     td {
       border: none;
-      position: relative;
-      padding-left: 50%;
       white-space: normal;
       text-align: left;
 
       &:before{
-        position: absolute;
-        top: 3px;
-        left: 10px;
-//        width: 45%;
-        padding-right: 10px;
+        width: 50%;
+        display: inline-block;
+        padding-right: 15px;
         white-space: nowrap;
         text-align: left;
         font-weight: bold;
